# Universal-encryption-tool-

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp  preprocessing.cpp  preprocessing.hpp  test.cpp
.github/workflows/: build.yml
bits/: bitoperation.cpp  bitoperation.hpp
crypto/: aes.cpp  aes.hpp  cipher.cpp  cipher.hpp  threadpool.cpp  threadpool.hpp
web/: index.html  script.js  style.css
